# rust-sandbox

./: .gitignore  Cargo.toml  README.md
src/: file_include.rs  file_include.txt
src/char_for_emoji/: main.rs
src/colors_on_terminal/: main.rs
src/destructuring/: main.rs
src/feature_flag/: main.rs
src/file_include/: main.rs  str.txt
src/generic/: main.rs
src/image/: main.rs
src/image_with_text/: main.rs
src/new_type_pattern/: main.rs
src/ref/: main.rs
src/restrict_type/: main.rs
src/std_io/: main.rs
src/str_concat/: main.rs
src/thread/: main.rs
src/trait/: main.rs
src/web_api/: main.rs
src/web_api_create_image/: main.rs
src/web_api_create_image/static/: index.html
src/write_read_cursor/: fuga.txt  main.rs
