[package]
name = "rust-sandbox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-web = "4.4.0"
colored = "2"
image = "0.24.7"
imageproc = "0.23.0"
rand = "0.8.3"
rusttype = "0.9.3"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.106"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "file_include"
path = "src/file_include/main.rs"

[[bin]]
name = "char_for_emoji"
path = "src/char_for_emoji/main.rs"

[[bin]]
name = "colors_on_terminal"
path = "src/colors_on_terminal/main.rs"

[[bin]]
name = "new_type_pattern"
path = "src/new_type_pattern/main.rs"

[[bin]]
name = "trait"
path = "src/trait/main.rs"

[[bin]]
name = "restrict_type"
path = "src/restrict_type/main.rs"

[[bin]]
name = "feature_flag"
path = "src/feature_flag/main.rs"

[[bin]]
name = "std_io"
path = "src/std_io/main.rs"

[[bin]]
name = "str_concat"
path = "src/str_concat/main.rs"

[[bin]]
name = "image"
path = "src/image/main.rs"

[[bin]]
name = "thread"
path = "src/thread/main.rs"

[[bin]]
name = "image_with_text"
path = "src/image_with_text/main.rs"

[[bin]]
name = "web_api"
path = "src/web_api/main.rs"

[[bin]]
name = "web_api_create_image"
path = "src/web_api_create_image/main.rs"

[features]
default = []
beta = []
